--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ if(WIN32)
 else()
     add_definitions(-Wall -Wextra -Wno-unused-function)
 
-    add_definitions(-fPIC -ggdb3)
+    add_definitions(-fPIC -ggdb3 -std=c++11)
     if(CMAKE_BUILD_TYPE MATCHES "(Release|RELEASE|release)")
         if(NOT CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
             add_definitions(-Ofast)
@@ -95,6 +95,6 @@ endif()
 # add_subdirectory(examples)
 add_subdirectory(benchmark)
 add_subdirectory(src)
-if(NOT ANDROID AND NOT IOS)
-add_subdirectory(tools)
-endif()
+#if(NOT ANDROID AND NOT IOS)
+#add_subdirectory(tools)
+#endif()
