C++11 in CMakeLists.txt because Xcode.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ endif()
 
 project(ncnn)
 
-option(NCNN_OPENMP "openmp support" ON)
+option(NCNN_OPENMP "openmp support" OFF)
 option(NCNN_STDIO "load model from external file" ON)
 option(NCNN_STRING "plain and verbose string" ON)
 option(NCNN_INSTALL_SDK "Install ncnn library and headers" ON)
@@ -57,9 +57,9 @@ if(WIN32)
     add_definitions(-D_SCL_SECURE_NO_WARNINGS -D_CRT_SECURE_NO_DEPRECATE)
     add_definitions(-DNOMINMAX)
 else()
-    add_definitions(-Wall -Wextra -Wno-unused-function)
+    add_definitions(-Wall -Wextra -Wno-unused-function -std=c++11)
 
-    add_definitions(-fPIC -ggdb3)
+    add_definitions(-fPIC -g)
     if(CMAKE_BUILD_TYPE MATCHES "(Release|RELEASE|release)")
         if(NOT CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
             add_definitions(-Ofast)
@@ -93,7 +93,7 @@ endif()
 ##############################################
 
 # add_subdirectory(examples)
-add_subdirectory(benchmark)
+#add_subdirectory(benchmark)
 add_subdirectory(src)
 if(NOT ANDROID AND NOT IOS)
 add_subdirectory(tools)
